syntax = "proto3";
package cosmos.minakeys.signing;

import "gogoproto/gogo.proto";

// Go package path points to the signing subpackage within x/minakeys module
option go_package = "github.com/node101-io/pulsar/cosmos/x/minakeys/signing";
option (gogoproto.messagename_all)      = true;
option (gogoproto.goproto_stringer_all) = false; // Custom stringer implementation is preferred
option (gogoproto.goproto_getters_all)  = false; // Avoid boilerplate getters

// PubKey defines a Pallas curve public key by its X-coordinate and the parity of its Y-coordinate.
message PubKey {
  bytes key = 1 [(gogoproto.customtype) = "minaPubKey"];
} 

// PrivKey defines a Pallas curve private key by its secret.
message PrivKey {
  bytes secret = 1 [(gogoproto.customtype) = "minaPrivKey"];
}