syntax = "proto3";

package interchain_security.minakeys;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "interchain_security/minakeys/params.proto";
import "interchain_security/minakeys/key_store.proto";

option go_package = "github.com/node101-io/pulsar/chain/x/minakeys/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams   (MsgUpdateParams  ) returns (MsgUpdateParamsResponse);
  rpc CreateKeyStore (MsgCreateKeyStore) returns (MsgCreateKeyStoreResponse);
  rpc UpdateKeyStore (MsgUpdateKeyStore) returns (MsgUpdateKeyStoreResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                         "authority";
  option           (amino.name) = "interchain_security/x/minakeys/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateKeyStore {
  option (cosmos.msg.v1.signer) = "creator";
  string creator         = 1;
  string cosmosPublicKey = 2;
  string minaPublicKey   = 3;
  bytes  cosmosSignature = 4;
  bytes  minaSignature   = 5;
}

message MsgCreateKeyStoreResponse {}

message MsgUpdateKeyStore {
  option (cosmos.msg.v1.signer) = "creator";
  string creator         = 1;
  string cosmosPublicKey = 2;
  string minaPublicKey   = 3;
  bytes  cosmosSignature = 4;
  bytes  minaSignature   = 5;
}

message MsgUpdateKeyStoreResponse {}

