package keeper

import (
	sdk "github.com/cosmos/cosmos-sdk/types"
	"github.com/cosmos/interchain-security/v5/x/bridge/types"
)

// SignerClient interface defines the methods for communicating with signer nodes
type SignerClient interface {
	VerifyActionList(settledHeight uint64, actions []types.PulsarAction, nextHeight uint64, witness string) (bool, error)
}

// VerifyActionList verifies the integrity of an action list with the signer node
func (k Keeper) VerifyActionList(ctx sdk.Context, settledHeight uint64, actions []types.PulsarAction, nextHeight uint64, witness string) (bool, error) {
	// Basic validations first
	if nextHeight <= settledHeight {
		return false, types.ErrInvalidBlockHeight
	}

	if len(actions) == 0 {
		return false, types.ErrEmptyActionList
	}

	// Validate each action
	for i, action := range actions {
		if err := k.validateAction(action); err != nil {
			ctx.Logger().Error("Invalid action in list",
				"index", i,
				"action", action,
				"error", err)
			return false, err
		}
	}

	// TODO: Implement actual signer node communication
	// For now, we'll implement a placeholder that performs basic validation
	// In production, this should make an HTTP/gRPC call to the signer node

	// Log the verification attempt
	ctx.Logger().Info("Verifying action list with signer node",
		"settled_height", settledHeight,
		"next_height", nextHeight,
		"actions_count", len(actions),
		"merkle_witness", witness)

	// Placeholder implementation - in production this would:
	// 1. Connect to signer node via HTTP/gRPC
	// 2. Send verification request with all parameters
	// 3. Receive and validate response
	// 4. Handle any network/communication errors

	return true, nil
}

// validateAction performs basic validation on a single action
func (k Keeper) validateAction(action types.PulsarAction) error {
	// Validate public key
	if err := k.ValidateMinaPublicKey(action.PublicKey); err != nil {
		return err
	}

	// Validate amount
	if action.Amount.IsZero() || action.Amount.IsNegative() {
		return types.ErrInvalidAmount
	}

	// Validate action type
	if action.ActionType != "deposit" && action.ActionType != "withdrawal" && action.ActionType != "settlement" {
		return types.ErrInvalidActionType
	}

	// Validate block height
	if action.BlockHeight == 0 {
		return types.ErrInvalidBlockHeight
	}

	return nil
}

// SetSignerClient sets the signer client (for dependency injection in tests)
func (k *Keeper) SetSignerClient(client SignerClient) {
	// This would be used for testing or different signer implementations
	// For now, we'll keep the verification logic inside the keeper
}
